--- a/app/src/main/res/layout/fragment_right.xml
+++ b/app/src/main/res/layout/fragment_right.xml
@@ -6,23 +6,8 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
-        android:textColor="#fff"
-        android:textSize="20dp" />
-
-    <Button
-        android:id="@+id/btn_01"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:text="测试按钮1" />
-
-    <EditText
+    <cm.offline.tv.ui.view.ImagesTemplates
         android:layout_width="match_parent"
-        android:layout_height="50dp"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
