屏幕操作监听，无人操作时息屏

--- a/app/src/main/res/layout/page_home.xml
+++ b/app/src/main/res/layout/page_home.xml
@@ -15,9 +15,8 @@
         android:layout_width="50dp"
         android:layout_height="match_parent" />
 
-    <fragment
+    <FrameLayout
         android:id="@+id/main_right_fragment"
-        android:name="cm.offline.tv.ui.right.RightFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
