--- a/app/src/main/res/layout/fragment_right_custom_made.xml
+++ b/app/src/main/res/layout/fragment_right_custom_made.xml
@@ -2,13 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eeeeee"
+    android:background="#222222"
     android:gravity="center"
     android:orientation="vertical">
 
-    <com.youth.banner.Banner
-        android:id="@+id/banner"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true" />
 </LinearLayout>
