--- a/app/src/main/res/layout/fragment_sliding.xml
+++ b/app/src/main/res/layout/fragment_sliding.xml
@@ -2,12 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#222222"
-    android:gravity="center"
     android:orientation="vertical">
 
-    <cm.offline.tv.ui.view.ImagesTemplates
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:background="@mipmap/shaosiming" />
 
 </LinearLayout>
