--- a/app/src/main/res/layout/item_sliding_page.xml
+++ b/app/src/main/res/layout/item_sliding_page.xml
@@ -2,13 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eeeeee"
-    android:gravity="center"
     android:orientation="vertical">
-
-    <com.youth.banner.Banner
-        android:id="@+id/banner"
+    <ImageView
+        android:id="@+id/image_page"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true" />
+        android:background="@mipmap/shaosiming"
+        android:layout_height="match_parent"/>
 </LinearLayout>
