--- a/app/src/main/res/layout/fragment_right_custom_made.xml
+++ b/app/src/main/res/layout/fragment_right_custom_made.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:layout_width="410dp"
-        android:layout_height="400dp"
+        android:id="@+id/fy_template"
+        android:layout_width="848.28dp"
+        android:layout_height="813.38dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp">
+        android:layout_marginTop="72dp">
 
         <ImageView
             android:id="@+id/iv_clothes_style"
@@ -23,20 +24,21 @@
             android:layout_height="match_parent" />
 
         <TextView
-            android:layout_width="75dp"
-            android:layout_height="25dp"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
             android:layout_gravity="center|bottom"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/btn_white_rounded_corners"
             android:gravity="center"
             android:text="预览效果"
             android:textColor="@color/text_colors_343338"
-            android:textSize="12dp" />
+            android:textSize="20dp" />
     </FrameLayout>
 
     <LinearLayout
+        android:id="@+id/ly_diy_btn_bottom"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
 
@@ -64,5 +66,80 @@
             android:layout_height="wrap_content"
             android:src="@drawable/diy_btn_bottom_wenzi" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ly_diy_right_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/fy_template"
+        android:layout_marginLeft="-50dp"
+        android:layout_marginBottom="60dp"
+        android:layout_toRightOf="@+id/fy_template"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/btn_diy_right_shopping_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_diy_right_btn_shopping_list_default" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="12dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/bg_mark_rounded"
+                android:gravity="center"
+                android:minWidth="16dp"
+                android:text="1"
+                android:textColor="@color/text_colors_ffffff"
+                android:textSize="7dp" />
+        </FrameLayout>
+
+
+        <ImageView
+            android:id="@+id/btn_diy_right_btn_shopping_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_diy_right_btn_shopping_add_default" />
+
+        <ImageView
+            android:id="@+id/btn_diy_right_btn_shopping_buy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_diy_right_btn_shopping_buy_default" />
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/fy_template"
+        android:layout_marginBottom="60dp"
+        android:layout_toLeftOf="@+id/fy_template">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_diy_left_btn_layers_icon_default" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="12dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="7dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/bg_mark_rounded"
+            android:gravity="center"
+            android:minWidth="16dp"
+            android:text="1"
+            android:textColor="@color/text_colors_ffffff"
+            android:textSize="7dp" />
+    </FrameLayout>
 
 </RelativeLayout>
