--- a/app/src/main/res/layout/page_home.xml
+++ b/app/src/main/res/layout/page_home.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333eee"
     android:orientation="horizontal">
 
     <fragment
         android:id="@+id/main_left_fragment"
         android:name="cm.offline.tv.ui.left.LeftFragment"
-        android:layout_width="252dp"
+        android:layout_width="504dp"
         android:layout_height="match_parent" />
 
     <TextView
-        android:layout_width="50dp"
-        android:layout_height="match_parent" />
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:background="@color/bg_colors_f8f8f8" />
 
     <FrameLayout
         android:id="@+id/main_right_fragment"
