--- a/app/src/main/res/layout/popup_diy_material.xml
+++ b/app/src/main/res/layout/popup_diy_material.xml
@@ -1,30 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center"
     android:layout_gravity="center_horizontal"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-
+    <ImageView
+        android:id="@+id/iv_close"
+        android:layout_width="wrap_content"
+        android:layout_gravity="right"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_diy_left_btn_layers_close_default"
+        />
     <androidx.cardview.widget.CardView
-        app:cardBackgroundColor="@color/bg_colors_ffffff"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="5dp"
         android:layout_width="1150dp"
         android:layout_height="290dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="70dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="25dp">
+        android:layout_marginBottom="25dp"
+        app:cardBackgroundColor="@color/bg_colors_ffffff"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.recyclerview.widget.RecyclerView
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="198dp" />
+                android:layout_height="198dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/list_material"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:visibility="gone" />
+
+                <LinearLayout
+                    android:id="@+id/ly_add_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="30dp"
+                    android:paddingLeft="66.5dp"
+                    android:paddingRight="66.5dp">
+
+                    <include layout="@layout/include_add_text_view" />
+                </LinearLayout>
+            </FrameLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -49,6 +75,7 @@
                     android:textSize="20dp" />
 
                 <TextView
+                    android:id="@+id/tv_material_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -72,4 +99,4 @@
             </RelativeLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+</FrameLayout>
