--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,7 @@
 
     <color name="line_colors_343338">#F5F5F5</color>
 
+<!--    <color name="line_colors_343338">#D0104C</color>-->
+
 
 </resources>
