支付状态页面

--- a/app/src/main/res/layout/include_add_text_view.xml
+++ b/app/src/main/res/layout/include_add_text_view.xml
@@ -15,6 +15,8 @@
             android:layout_height="69dp"
             android:background="@drawable/bg_gray_rounded_corners_41"
             android:paddingLeft="50dp"
+            android:paddingRight="20dp"
+            android:drawableRight="@mipmap/ic_pen_click"
             android:paddingTop="14.5dp"
             android:paddingBottom="14.5dp"
             android:text="点击输入文字…"
@@ -33,6 +35,8 @@
             android:background="@drawable/bg_gray_rounded_corners_41"
             android:paddingLeft="50dp"
             android:paddingTop="14.5dp"
+            android:paddingRight="20dp"
+            android:drawableRight="@mipmap/ic_drop_down_default"
             android:paddingBottom="14.5dp"
             android:text="微软雅黑"
             android:textColor="@color/text_colors_343338"
