--- a/app/src/main/res/layout/popup_diy_material.xml
+++ b/app/src/main/res/layout/popup_diy_material.xml
@@ -5,18 +5,19 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:orientation="vertical">
+
     <ImageView
         android:id="@+id/iv_close"
         android:layout_width="wrap_content"
-        android:layout_gravity="right"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_diy_left_btn_layers_close_default"
-        />
+        android:layout_gravity="right"
+        android:src="@mipmap/btn_click_close" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="1150dp"
         android:layout_height="290dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="60dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="25dp"
         app:cardBackgroundColor="@color/bg_colors_ffffff"
@@ -32,13 +33,48 @@
                 android:layout_width="match_parent"
                 android:layout_height="198dp">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/list_material"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:visibility="gone" />
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:id="@+id/ly_upload_code"
+                        android:layout_width="wrap_content"
+                        android:paddingTop="20dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="140dp"
+                            android:layout_height="140dp"
+                            android:scaleType="centerCrop"
+                            android:src="@mipmap/ic_upload_code" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:paddingTop="7dp"
+                            android:text="图片上传"
+                            android:textColor="@color/text_colors_343338"
+                            android:textSize="20dp" />
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/iv_line"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/bg_line" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/list_material"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:visibility="visible" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/ly_add_text_view"
@@ -46,7 +82,8 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="30dp"
                     android:paddingLeft="66.5dp"
-                    android:paddingRight="66.5dp">
+                    android:paddingRight="66.5dp"
+                    android:visibility="gone">
 
                     <include layout="@layout/include_add_text_view" />
                 </LinearLayout>
