--- a/app/src/main/res/layout/popup_method_payment.xml
+++ b/app/src/main/res/layout/popup_method_payment.xml
@@ -80,6 +80,7 @@
                 android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/btn_exit"
                 android:layout_width="600dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
