--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,11 +11,13 @@
 
 
     <color name="bg_colors_f8f8f8">#F8F8F8</color>
+    <color name="bg_colors_fff8f8f8">#fff8f8f8</color>
     <color name="bg_colors_ffffff">#FFFFFF</color>
     <color name="bg_colors_4BF3F3F3">#4BF3F3F3</color>
     <color name="bg_colors_f5f5f5">#F5F5F5</color>
 
     <color name="text_colors_ffffff">#FFFFFF</color>
+    <color name="text_colors_000000">#000000</color>
     <color name="text_colors_343338">#343338</color>
     <color name="text_colors_99343338">#99343338</color>
     <color name="text_colors_613E94">#613E94</color>
